# norad

./: .gitattributes  .gitignore  .gitmodules  .typos.toml  Cargo.toml  README.md  build.rs
.github/workflows/: bloat.yml  rust.yml
benches/: glif_parse.rs  load_family.rs  load_progressively.rs
examples/: glif_note.rs  glif_print.rs  letterspacer.rs  load_a_bunch.rs  load_save.rs  normalize.rs  open_ufo.rs
pynorad/: Cargo.toml  README.md  pyproject.toml  setup.cfg  setup.py
pynorad/bench/: nudge.py
pynorad/pynorad/: __init__.py
pynorad/src/: error.rs  font.rs  fontinfo.rs  glyph.rs  guideline.rs  layer.rs  lib.rs  lib_object.rs  util.rs
pynorad/tests/: conftest.py  test_ufo.py
pynorad/tests/data/MutatorSansBoldCondensed.ufo/: fontinfo.plist  groups.plist  kerning.plist  lib.plist
pynorad/tests/data/MutatorSansBoldCondensed.ufo/glyphs/: A_acute.glif  A_dieresis.glif  B_.glif  C_.glif  D_.glif  E_.glif  F_.glif  G_.glif  H_.glif  J_.glif  J_.narrow.glif  K_.glif  L_.glif  M_.glif  N_.glif  O_.glif  P_.glif  Q_.glif  R_.glif  T_.glif  U_.glif  V_.glif  W_.glif  X_.glif  Y_.glif  Z_.glif  acute.glif  arrowdown.glif  arrowleft.glif  arrowright.glif  arrowup.glif  colon.glif  comma.glif  contents.plist  dieresis.glif  dot.glif  layerinfo.plist  period.glif  quotedblbase.glif  quotedblleft.glif  (+3 more)
pynorad/tests/data/MutatorSansBoldCondensed.ufo/glyphs.background/: contents.plist  layerinfo.plist
pynorad/tests/data/UbuTestData.ufo/: fontinfo.plist  lib.plist
pynorad/tests/data/UbuTestData.ufo/data/: com.daltonmaag.vttLib.plist
pynorad/tests/data/UbuTestData.ufo/data/com.github.fonttools.ttx/: T_S_I__0.ttx  T_S_I__1.ttx  T_S_I__2.ttx  T_S_I__3.ttx  T_S_I__5.ttx
pynorad/tests/data/UbuTestData.ufo/glyphs.public.background/: contents.plist
pynorad/tests/objects/: test_component.py  test_contour.py  test_datastore.py  test_font.py  test_glyph.py  test_layer.py  test_object_lib.py
src/: color.rs  data_request.rs  datastore.rs  designspace.rs  error.rs  font.rs  font_sink.rs  font_source.rs  fontinfo.rs  glyph_names.rs  groups.rs  guideline.rs  identifier.rs  kerning.rs  layer.rs  lib.rs  load.rs  load_from_source.rs  name.rs  names.rs  non_file_io.rs  parse.rs  py_id.rs  serde_xml_plist.rs  shared_types.rs  ufo.rs  ufo_data.rs  upconversion.rs  util.rs  write.rs  zip_source.rs
src/glyph/: affinetransform.rs  anchor.rs  builder.rs  builder2.rs  codepoints.rs  component.rs  contour.rs  image.rs  mod.rs  parse.rs  parse2.rs  pen.rs  point.rs  serialize.rs  tests.rs
src/ufo/: glyph.rs  glyph_save.rs  glyph_tests.rs  layer.rs  mod.rs
testdata/: BareConditions.designspace  Blinker_one.glif  MutatorSans.designspace  MutatorSans2.designspace  MutatorSansAlwaysOnRules.designspace  bom_glif.glif  cid61855.glif  fontinfo_empty_guideline_name.plist  glifv1.glif  groups_empty_entries.plist  identifiers.glif  labelname_wght.designspace  no_instance_names.designspace  no_source_names.designspace  note.glif  noto-cjk-notdef.glif  optional_instance_names.designspace  optional_source_names.designspace  sample_period.glif  sample_period_normalized.glif  single_wght.designspace  small_lib.glif  utf16-glyph.xml  wght.designspace  with_mappings.designspace
testdata/PenTest.ufo/glyphs/: b.glif  c.glif  contents.plist  d.glif  e.glif
testdata/dataimagetest.ufo/data/com.testing.random/: c.txt
testdata/fontinfotest.ufo/: fontinfo.plist  lib.plist
testdata/fontinfotest.ufo/glyphs/: a.glif
testdata/fontinfotest_v1.ufo/: fontinfo.plist  lib.plist  metainfo.plist
testdata/fontinfotest_v3.ufo/: fontinfo.plist  groups.plist  kerning.plist  lib.plist
testdata/identifiers.ufo/: fontinfo.plist  lib.plist  metainfo.plist
testdata/identifiers.ufo/glyphs/: component.glif  contents.plist  test.glif
testdata/lineendings/: README.md
testdata/lineendings/Tester-LineEndings.ufo/: features.fea  fontinfo.plist  layercontents.plist  lib.plist  metainfo.plist
testdata/lineendings/Tester-LineEndings.ufo/glyphs/: contents.plist  layerinfo.plist  space.glif
testdata/lineendings/Tester-LineEndings.ufo/glyphs.background/: contents.plist  layerinfo.plist
testdata/snapshots/: a_bit_of_everything.xml  empty.xml
testdata/ufo/Tester-MissingGlyphsContents-BackgroundLayer.ufo/: fontinfo.plist  lib.plist
testdata/ufo/Tester-MissingLayerContents.ufo/: fontinfo.plist  lib.plist
testdata/ufo/Tester-MissingMetaInfo.ufo/: fontinfo.plist  lib.plist
testdata/unix/: unix_custom_whitespace.glif  unix_custom_whitespace_single_quote.glif  unix_default_formatting.glif  unix_single_quote.glif
testdata/upconversion_kerning/: glyphname_groupname_groups_expected.plist  glyphname_groupname_kerning_expected.plist
testdata/upconversion_kerning/glyphname_groupname_UFOv1.ufo/: fontinfo.plist  groups.plist  kerning.plist  metainfo.plist
testdata/upconversion_kerning/glyphname_groupname_UFOv2.ufo/: metainfo.plist
testdata/upconversion_kerning/glyphname_groupname_UFOv2.ufo/glyphs/: X_.glif
testdata/windows/: windows_custom_whitespace.glif  windows_custom_whitespace_single_quote.glif  windows_default_formatting.glif  windows_single_quote.glif
tests/: load_from_source.rs  save.rs  save_to_sink.rs  ufoz.rs
