[package]
name = "norad"
version = "0.11.0"
authors = ["Colin Rofls <colin@cmyr.net>", "Nikolaus Waxweiler <madigens@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
keywords = ["font", "ufo", "fonts"]
repository = "https://github.com/linebender/norad"
description = "Read and write Unified Font Object files."
readme = "README.md"
categories = ["graphics", "text-processing"]

exclude = [
    "/testdata/*"
]

[package.metadata.docs.rs]
features = ["kurbo"]

[dependencies]
plist = { version =  "1.4.1", features = ["serde"] }
uuid = { version = "1.2", features = ["v4"] }
serde = { version =  "1.0", features = ["rc", "derive"] }
serde_derive = "1.0"
serde_repr = "0.1"
quick-xml = { version = "0.30.0", features = ["serialize"] }
rayon = { version = "1.3.0", optional = true }
kurbo = { version = "0.9.0", optional = true }
thiserror = "1.0"
indexmap = { version = "2.0.0", features = ["serde"] }
base64 = "0.21.2"

[dependencies.druid]
default-features = false
features = ["x11"]
version = "0.8.0"
optional = true

[dev-dependencies]
failure = "0.1.6"
serde_test = "1.0.102"
tempdir = "0.3.7"
maplit = "1.0.2"
pretty_assertions = "1.0"
expect-test = "1.4.1"
