[package]
name = "norad"
version = "0.16.1"
authors = ["Colin Rofls <colin@cmyr.net>", "Nikolaus Waxweiler <madigens@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
keywords = ["font", "ufo", "fonts"]
repository = "https://github.com/linebender/norad"
description = "Read and write Unified Font Object files."
readme = "README.md"
categories = ["graphics", "text-processing"]

exclude = [
    "/testdata/*"
]

[package.metadata.docs.rs]
features = ["kurbo"]

[features]
default = ["object-libs"]
# allow us to add libs to objects, which requires potentially creating identifiers
object-libs = ["uuid"]
kurbo = ["dep:kurbo"]
rayon = ["dep:rayon"]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
uuid = { version = "1.2", features = ["v4"], optional = true }
[target.'cfg(target_family = "wasm")'.dependencies]
uuid = { version = "1.2", features = ["v4", "js"], optional = true }

[dependencies]
plist = { version =  "1.4.1", features = ["serde"] }
serde = { version =  "1.0", features = ["rc", "derive"] }
serde_derive = "1.0"
serde_repr = "0.1"
quick-xml = { version = "0.38.0", features = ["serialize"] }
rayon = { version = "1.3.0", optional = true }
kurbo = { version = "0.13.0", optional = true }
thiserror = "2.0"
indexmap = { version = "2.0.0", features = ["serde"] }
base64 = "0.22"
close_already = "0.3"

[dev-dependencies]
failure = "0.1.6"
serde_test = "1.0.102"
maplit = "1.0.2"
pretty_assertions = "1.0"
expect-test = "1.4.1"
criterion = "0.7"
tempfile = "3.8.0"

# https://github.com/bheisler/criterion.rs/issues/193
# Make it possible to save baseline, e.g. cargo bench -- --save-baseline master
[lib]
bench = false

[[bench]]
name = "glif_parse"
harness = false
