[package]
name = "pynorad"
version = "0.1.0"
authors = ["Colin Rofls <colin@cmyr.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
norad = { version = "0.3.1", path = "..", features = ["rayon",  "kurbo", "py"] }
pyo3 = { version = "0.13", features = ["extension-module"] }
kurbo = { version = "0.8.0"}
